--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -343,7 +343,7 @@ import { Icon } from 'astro-icon'
     This is the Counters section and is edited in the Counters.astro file under components
 
   -->
-  <section class="mt-24 mb-24">
+  <!-- <section class="mt-24 mb-24">
     <div class="container">
       <h2 class="mb-16 text-5xl">Counters</h2>
       <div class="grid grid-cols-1 gap-12 sm:grid-cols-2 md:grid-cols-4">
@@ -354,7 +354,7 @@ import { Icon } from 'astro-icon'
       </div>
     </div>
   </section>
-</DefaultLayout>
+</DefaultLayout> -->
   <!--  
 
     This is the style sheet for this page
