removed feature page and reduced space below organisers

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import DefaultLayout from '../layouts/DefaultLayout.astro'
 import Hero from '../components/Hero.astro'
 import Speaker from '../components/Speaker.astro'
 import Organiser from '../components/Organiser.astro'
-import Counter from '../components/Counter.astro'
+// import Counter from '../components/Counter.astro'
 import CounterDates from '../components/CounterDates.astro'
 import ContentMedia from '../components/ContentMedia.astro'
 import HeadlineSponsors from '../components/HeadlineSponsors.astro'
@@ -251,7 +251,7 @@ import { Icon } from 'astro-icon'
     This is the Organisers section and is edited in the Organiser.astro file under components
 
   -->
-  <section class="my-32">
+  <section class="my-24">
     <div class="container">
       <h2 id="organisers" class="mb-16 text-5xl">Organisers</h2>
       <div class="grid grid-cols-1 gap-12 md:grid-cols-2 lg:grid-cols-3">
