--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -14,13 +14,13 @@ import { Icon } from 'astro-icon'
       <a href="/about/">About</a>
     </li>
     <li class="menu-item">
-      <a href="#speakeers">Speakers</a>
+      <a href="/#speakeers">Speakers</a>
     </li>
     <li class="menu-item">
-      <a href="#sponsors">Sponsors</a>
+      <a href="/#sponsors">Sponsors</a>
     </li>
     <li class="menu-item">
-      <a href="#organisers">Organisers</a>
+      <a href="/#organisers">Organisers</a>
     </li>
     <!-- <li class="menu-item">
       <a href="/blog/">News</a>
