--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,6 +12,15 @@ import SilverSponsors from '../components/SilverSponsors.astro'
 import CommunitySponsors from '../components/CommunitySponsors.astro'
 import { Icon } from 'astro-icon'
 ---
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-6DE8E1DZJM"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-6DE8E1DZJM');
+</script>
 
 <DefaultLayout title="Home">
   <Hero />
