added google analytics

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,6 +13,8 @@ import CommunitySponsors from '../components/CommunitySponsors.astro'
 import { Icon } from 'astro-icon'
 ---
 
+<DefaultLayout title="Home">
+  <Hero />
   <!--  
 
     This is the important dates section and is edited in the CountersDates.astro file under components
