--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -77,6 +77,42 @@ const currentYear = new Date().getFullYear()
       </FooterNavigation>
     </div>
   </section>
+  <section>
+    <div class="container">
+      <div class="grid grid-cols-1 gap-0 sm:grid-cols-1 md:grid-cols-10">
+        <div>
+          <img class="footer-social-media" src="/blank-social.svg" />
+        </div>
+        <div>
+          <img class="footer-social-media" src="/blank-social.svg.svg" />
+        </div>
+        <div>
+          <img class="footer-social-media" src="/facebook-logo.svg" />
+        </div>
+        <div>
+          <img class="footer-social-media" src="/twitter-logo.svg" />
+        </div>
+        <div>
+          <img class="footer-social-media" src="/linkedin-logo.svg" />
+        </div>
+        <div>
+          <img class="footer-social-media" src="/instagram-logo.svg" />
+        </div>
+        <div>
+          <img class="footer-social-media" src="/youtube-logo.svg" />
+        </div>
+        <div>
+          <img class="footer-social-media" src="/github-logo.svg" />
+        </div>
+        <div>
+          <img class="footer-social-media" src="/blank-social.svg.svg" />
+        </div>
+        <div>
+          <img class="footer-social-media" src="/blank-social.svg.svg" />
+        </div>
+      </div>
+    </div>
+  </section>
   <section class="my-8">
     <div class="container">
       <FooterLogo style="margin: auto;"></FooterLogo>
@@ -102,6 +138,11 @@ const currentYear = new Date().getFullYear()
       height: 5em;
       margin: auto;
     }
+
+  .footer-social-media {
+      height: 2em;
+      margin: auto;
+  }
 
   .footer-copyright {
     text-align: center;
