--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -84,7 +84,7 @@ const currentYear = new Date().getFullYear()
           <img class="footer-social-media" src="/blank-social.svg" />
         </div>
         <div>
-          <img class="footer-social-media" src="/blank-social.svg.svg" />
+          <img class="footer-social-media" src="/blank-social.svg" />
         </div>
         <div>
           <img class="footer-social-media" src="/facebook-logo.svg" />
@@ -105,10 +105,10 @@ const currentYear = new Date().getFullYear()
           <img class="footer-social-media" src="/github-logo.svg" />
         </div>
         <div>
-          <img class="footer-social-media" src="/blank-social.svg.svg" />
+          <img class="footer-social-media" src="/blank-social.svg" />
         </div>
         <div>
-          <img class="footer-social-media" src="/blank-social.svg.svg" />
+          <img class="footer-social-media" src="/blank-social.svg" />
         </div>
       </div>
     </div>
@@ -140,7 +140,7 @@ const currentYear = new Date().getFullYear()
     }
 
   .footer-social-media {
-      height: 2em;
+      height: 1.2em;
       margin: auto;
   }
 
