--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -79,7 +79,13 @@ const currentYear = new Date().getFullYear()
   </section>
   <section>
     <div class="container">
-      <div class="grid grid-cols-1 gap-0 sm:grid-cols-1 md:grid-cols-10">
+      <div class="grid grid-cols-1 gap-0 sm:grid-cols-1 md:grid-cols-14">
+        <div>
+          <img class="footer-social-media" src="/blank-social.svg" />
+        </div>
+        <div>
+          <img class="footer-social-media" src="/blank-social.svg" />
+        </div>
         <div>
           <img class="footer-social-media" src="/blank-social.svg" />
         </div>
@@ -103,6 +109,12 @@ const currentYear = new Date().getFullYear()
         </div>
         <div>
           <img class="footer-social-media" src="/github-logo.svg" />
+        </div>
+        <div>
+          <img class="footer-social-media" src="/blank-social.svg" />
+        </div>
+        <div>
+          <img class="footer-social-media" src="/blank-social.svg" />
         </div>
         <div>
           <img class="footer-social-media" src="/blank-social.svg" />
