--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -84,7 +84,10 @@ const currentYear = new Date().getFullYear()
   </section>
   <section>
     <div class="container">
-      <div class="grid grid-cols-1 gap-0 sm:grid-cols-1 md:grid-cols-12">
+      <div class="grid grid-cols-1 gap-0 sm:grid-cols-1 md:grid-cols-16">
+        <div>
+          <img class="footer-social-media" src="/blank-social.svg" />
+        </div>
         <div>
           <img class="footer-social-media" src="/blank-social.svg" />
         </div>
@@ -111,6 +114,9 @@ const currentYear = new Date().getFullYear()
         </div>
         <div>
           <img class="footer-social-media" src="/github-logo.svg" />
+        </div>
+        <div>
+          <img class="footer-social-media" src="/blank-social.svg" />
         </div>
         <div>
           <img class="footer-social-media" src="/blank-social.svg" />
