--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -84,7 +84,7 @@ const currentYear = new Date().getFullYear()
   </section>
   <section>
     <div class="container">
-      <div class="grid grid-cols-1 gap-0 sm:grid-cols-1 md:grid-cols-16">
+      <!-- <div class="grid grid-cols-1 gap-0 sm:grid-cols-1 md:grid-cols-16">
         <div>
           <img class="footer-social-media" src="/blank-social.svg" />
         </div>
@@ -127,7 +127,15 @@ const currentYear = new Date().getFullYear()
         <div>
           <img class="footer-social-media" src="/blank-social.svg" />
         </div>
-      </div>
+      </div> -->
+      <span>
+        <img class="footer-social-media" src="/facebook-logo.svg" />
+        <img class="footer-social-media" src="/twitter-logo.svg" />
+        <img class="footer-social-media" src="/linkedin-logo.svg" />
+        <img class="footer-social-media" src="/instagram-logo.svg" />
+        <img class="footer-social-media" src="/youtube-logo.svg" />
+        <img class="footer-social-media" src="/github-logo.svg" />
+      </span>
     </div>
   </section>
   <section class="my-8">
