footer socials spacing

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -128,11 +128,11 @@ const currentYear = new Date().getFullYear()
           <img class="footer-social-media" src="/blank-social.svg" />
         </div>
       </div> -->
-        <img class="footer-social-media" src="/facebook-logo.svg" />
-        <img class="footer-social-media" src="/twitter-logo.svg" />
-        <img class="footer-social-media" src="/linkedin-logo.svg" />
-        <img class="footer-social-media" src="/instagram-logo.svg" />
-        <img class="footer-social-media" src="/youtube-logo.svg" />
+        <img style="float: left;" class="footer-social-media" src="/facebook-logo.svg" />
+        <img style="float: left;" class="footer-social-media" src="/twitter-logo.svg" />
+        <img style="float: left;" class="footer-social-media" src="/linkedin-logo.svg" />
+        <img style="float: left;" class="footer-social-media" src="/instagram-logo.svg" />
+        <img style="float: left;" class="footer-social-media" src="/youtube-logo.svg" />
         <img class="footer-social-media" src="/github-logo.svg" />
     </div>
   </section>
