footer socials spacing

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -83,8 +83,8 @@ const currentYear = new Date().getFullYear()
     </div>
   </section>
   <section>
-    <div class="container">
-      <!-- <div class="grid grid-cols-1 gap-0 sm:grid-cols-1 md:grid-cols-16">
+    <div class="container-social">
+      <div class="grid grid-cols-1 gap-0 sm:grid-cols-1 md:grid-cols-16">
         <div>
           <img class="footer-social-media" src="/blank-social.svg" />
         </div>
@@ -127,13 +127,7 @@ const currentYear = new Date().getFullYear()
         <div>
           <img class="footer-social-media" src="/blank-social.svg" />
         </div>
-      </div> -->
-        <img class="footer-social-media" src="/facebook-logo.svg" />
-        <img class="footer-social-media" src="/twitter-logo.svg" />
-        <img class="footer-social-media" src="/linkedin-logo.svg" />
-        <img class="footer-social-media" src="/instagram-logo.svg" />
-        <img class="footer-social-media" src="/youtube-logo.svg" />
-        <img class="footer-social-media" src="/github-logo.svg" />
+      </div>
     </div>
   </section>
   <section class="my-8">
