footer socials spacing

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -84,8 +84,8 @@ const currentYear = new Date().getFullYear()
   </section>
   <section>
     <div class="container-social">
-      <div class="grid grid-cols-1 gap-0 sm:grid-cols-1 md:grid-cols-16">
-        <div>
+      <div class="grid grid-cols-1 gap-0 sm:grid-cols-1 md:grid-cols-6">
+        <!-- <div>
           <img class="footer-social-media" src="/blank-social.svg" />
         </div>
         <div>
@@ -96,7 +96,7 @@ const currentYear = new Date().getFullYear()
         </div>
         <div>
           <img class="footer-social-media" src="/blank-social.svg" />
-        </div>
+        </div> -->
         <div>
           <img class="footer-social-media" src="/facebook-logo.svg" />
         </div>
@@ -115,7 +115,7 @@ const currentYear = new Date().getFullYear()
         <div>
           <img class="footer-social-media" src="/github-logo.svg" />
         </div>
-        <div>
+        <!-- <div>
           <img class="footer-social-media" src="/blank-social.svg" />
         </div>
         <div>
@@ -126,7 +126,7 @@ const currentYear = new Date().getFullYear()
         </div>
         <div>
           <img class="footer-social-media" src="/blank-social.svg" />
-        </div>
+        </div> -->
       </div>
     </div>
   </section>
@@ -152,7 +152,7 @@ const currentYear = new Date().getFullYear()
     }
 
   .footer-social-media {
-      height: 1.2em;
+      height: 1.5em;
       margin: auto;
   }
 
