footer socials spacing

--- a/src/assets/scss/globals.scss
+++ b/src/assets/scss/globals.scss
@@ -7,6 +7,7 @@
 @use 'base/font';
 @use 'base/list';
 @use 'base/container';
+@use 'base/container-social';
 @use 'base/breakpoint';
 @use 'base/button';
 @use 'base/color';
