footer socials spacing

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -9,14 +9,8 @@ const currentYear = new Date().getFullYear()
 <footer>
   <CallToAction />
   <section class="py-0">
-    <div class="container">
-      <div class="grid grid-cols-1 gap-0 sm:grid-cols-1 md:grid-cols-11">
-        <div>
-          <img class="footer-mascot-svg" src="/blank.svg" />
-        </div>
-        <div>
-          <img class="footer-mascot-svg" src="/blank.svg" />
-        </div>
+    <div class="container-mascots">
+      <div class="grid grid-cols-1 gap-0 sm:grid-cols-1 md:grid-cols-7">
         <div>
           <img class="footer-mascot-svg" src="/octo-mascot.svg" />
         </div>
@@ -37,12 +31,6 @@ const currentYear = new Date().getFullYear()
         </div>
         <div>
           <img class="footer-mascot-svg" src="/serverless-mascot.svg" />
-        </div>
-        <div>
-          <img class="footer-mascot-svg" src="/blank.svg" />
-        </div>
-        <div>
-          <img class="footer-mascot-svg" src="/blank.svg" />
         </div>
       </div>
     </div>
