--- a/src/assets/scss/globals.scss
+++ b/src/assets/scss/globals.scss
@@ -8,6 +8,7 @@
 @use 'base/list';
 @use 'base/container';
 @use 'base/container-social';
+@use 'base/container-mascots';
 @use 'base/breakpoint';
 @use 'base/button';
 @use 'base/color';
