footer socials spacing

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -8,7 +8,7 @@ const currentYear = new Date().getFullYear()
 
 <footer>
   <CallToAction />
-  <section class="py-0">
+  <section>
     <div class="container-mascots">
       <div class="grid grid-cols-1 gap-0 sm:grid-cols-1 md:grid-cols-7">
         <div>
