footer socials spacing

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,6 +1,6 @@
 ---
 import CallToAction from './CallToAction.astro'
-import FooterLogo from './FooterLogo.astro'
+// import FooterLogo from './FooterLogo.astro'
 import FooterNavigation from './FooterNavigation.astro'
 
 const currentYear = new Date().getFullYear()
@@ -63,11 +63,6 @@ const currentYear = new Date().getFullYear()
           <a href="/code-of-conduct/">Code of Conduct</a>
         </li>
       </FooterNavigation>
-    </div>
-  </section>
-  <section class="my-8">
-    <div class="container">
-      <FooterLogo style="margin: auto;"></FooterLogo>
     </div>
   </section>
   <section>
