footer socials spacing

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -69,22 +69,22 @@ const currentYear = new Date().getFullYear()
     <div class="container-social">
       <div class="grid grid-cols-1 gap-0 sm:grid-cols-1 md:grid-cols-6">
         <div>
-          <img class="footer-social-media" src="/facebook-logo.svg" />
+          <a target="_blank" href="https://www.facebook.com/ServerlessDUB/"><img  alt="ServerlessDays Dublin - Facebook Icon" class="footer-social-media" src="/facebook-logo.svg" /></a>
         </div>
         <div>
-          <img class="footer-social-media" src="/twitter-logo.svg" />
+          <a target="_blank" href="https://mobile.twitter.com/serverlessdub/"><img alt="ServerlessDays Dublin - Twitter Icon" class="footer-social-media" src="/twitter-logo.svg" /></a>
         </div>
         <div>
-          <img class="footer-social-media" src="/linkedin-logo.svg" />
+          <a target="_blank" href="https://www.linkedin.com/company/serverlessdays-dublin/"><img alt="ServerlessDays Dublin - LinkedIn Icon" class="footer-social-media" src="/linkedin-logo.svg" /></a>
         </div>
         <div>
-          <img class="footer-social-media" src="/instagram-logo.svg" />
+          <a target="_blank" href=""><img alt="ServerlessDays Dublin - Instagram Icon" class="footer-social-media" src="/instagram-logo.svg" /></a>
         </div>
         <div>
-          <img class="footer-social-media" src="/youtube-logo.svg" />
+          <a target="_blank" href="https://www.youtube.com/@ServerlessDUB/"><img alt="ServerlessDays Dublin - YouTube Channel Icon" class="footer-social-media" src="/youtube-logo.svg" /></a>
         </div>
         <div>
-          <img class="footer-social-media" src="/github-logo.svg" />
+          <a target="_blank" href="https://github.com/serverlessdays-dublin"><img alt="ServerlessDays Dublin - GitHub Icon" class="footer-social-media" src="/github-logo.svg" /></a>
         </div>
       </div>
     </div>
