--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -94,12 +94,12 @@ import { Icon } from 'astro-icon'
           Amazon Web Services<br /><br />
             <div style="float: left; padding-right: 8px;">
               <a target="_blank" href="https://www.linkedin.com/in/julianrwood">
-                <img height="20px" width="20px" src="linkedin.svg" />
+                <img height="20px" width="20px" src="linkedin-logo.svg" />
               </a>
             </div>
             <div>
               <a target="_blank" href="https://twitter.com/julian_wood">
-                <img height="20px" width="20px" src="twitter.svg" />
+                <img height="20px" width="20px" src="twitter-logo.svg" />
               </a>
             </div> 
         </Speaker>
@@ -108,8 +108,16 @@ import { Icon } from 'astro-icon'
           <h3>Ben Ellerby</h3>
           Founder / AWS Serverless Hero<br />
           aleios<br /><br />
-          <div style="float: left; padding-right: 8px;"><a target="_blank" href="https://www.linkedin.com/in/benjaminellerby/"><img height="20px" width="20px" src="linkedin.svg" /></a></div>
-          <div><a target="_blank" href="https://twitter.com/EllerbyBen"><img height="20px" width="20px" src="twitter.svg" /></a></div> 
+          <div style="float: left; padding-right: 8px;">
+            <a target="_blank" href="https://www.linkedin.com/in/benjaminellerby/">
+              <img height="20px" width="20px" src="linkedin-logo.svg" />
+            </a>
+          </div>
+          <div>
+            <a target="_blank" href="https://twitter.com/EllerbyBen">
+              <img height="20px" width="20px" src="twitter-logo.svg" />
+            </a>
+          </div> 
         </Speaker>
         <Speaker> 
           <img class="speaker-image-border" height="100px" width="100px" src="jeremy-daly.jpeg" /><br />
@@ -118,12 +126,12 @@ import { Icon } from 'astro-icon'
           Ampt<br /><br />
           <div style="float: left; padding-right: 8px;">
             <a target="_blank" href="https://www.linkedin.com/in/jeremydaly/">
-              <img height="20px" width="20px" src="linkedin.svg" />
+              <img height="20px" width="20px" src="linkedin-logo.svg" />
             </a>
           </div>
           <div>
             <a target="_blank" href="https://twitter.com/jeremy_daly">
-              <img height="20px" width="20px" src="twitter.svg" />
+              <img height="20px" width="20px" src="twitter-logo.svg" />
             </a>
           </div>
         </Speaker>
@@ -134,12 +142,12 @@ import { Icon } from 'astro-icon'
           The Burning Monk<br /><br />
           <div style="float: left; padding-right: 8px;">
             <a target="_blank" href="https://www.linkedin.com/in/theburningmonk/">
-              <img height="20px" width="20px" src="linkedin.svg" />
+              <img height="20px" width="20px" src="linkedin-logo.svg" />
             </a>
           </div> 
           <div>
             <a target="_blank" href="https://twitter.com/theburningmonk">
-              <img height="20px" width="20px" src="twitter.svg" />
+              <img height="20px" width="20px" src="twitter-logo.svg" />
             </a>
           </div>  
         </Speaker>
@@ -150,12 +158,12 @@ import { Icon } from 'astro-icon'
           fourTheorem<br /><br />
           <div style="float: left; padding-right: 8px;">
             <a target="_blank" href="https://www.linkedin.com/in/lucianomammino/">
-              <img height="20px" width="20px" src="linkedin.svg" />
+              <img height="20px" width="20px" src="linkedin-logo.svg" />
             </a>
           </div>
           <div>
             <a target="_blank" href="https://twitter.com/loige">
-              <img height="20px" width="20px" src="twitter.svg" />
+              <img height="20px" width="20px" src="twitter-logo.svg" />
             </a>
           </div>
         </Speaker>
@@ -166,7 +174,7 @@ import { Icon } from 'astro-icon'
           Accenture | Cloud First<br /><br />
           <div style="float: left; padding-right: 8px;">
             <a target="_blank" href="https://www.linkedin.com/in/simonjgr/">
-              <img height="20px" width="20px" src="linkedin.svg" />
+              <img height="20px" width="20px" src="linkedin-logo.svg" />
             </a>
           </div> 
         </Speaker>
@@ -177,12 +185,12 @@ import { Icon } from 'astro-icon'
           globaldatanet / Serverless Summit<br /><br />
           <div style="float: left; padding-right: 8px;">
             <a target="_blank" href="https://www.linkedin.com/in/marcschroeter/">
-              <img height="20px" width="20px" src="linkedin.svg" />
+              <img height="20px" width="20px" src="linkedin-logo.svg" />
             </a>
           </div> 
           <div>
             <a target="_blank" href="https://twitter.com/marc_schroeter/">
-              <img height="20px" width="20px" src="twitter.svg" />
+              <img height="20px" width="20px" src="twitter-logo.svg" />
             </a>
           </div>
         </Speaker>
@@ -193,12 +201,12 @@ import { Icon } from 'astro-icon'
           The LEGO Group<br /><br />
           <div style="float: left; padding-right: 8px;">
             <a target="_blank" href="https://www.linkedin.com/in/marcschroeter/">
-              <img height="20px" width="20px" src="linkedin.svg" />
+              <img height="20px" width="20px" src="linkedin-logo.svg" />
             </a>
           </div> 
           <div>
             <a target="_blank" href="https://twitter.com/marc_schroeter/">
-              <img height="20px" width="20px" src="twitter.svg" />
+              <img height="20px" width="20px" src="twitter-logo.svg" />
             </a>
           </div>
         </Speaker>
@@ -209,12 +217,12 @@ import { Icon } from 'astro-icon'
           Amazon Web Services<br /><br />
           <div style="float: left; padding-right: 8px;">
             <a target="_blank" href="https://www.linkedin.com/in/singledigit/">
-              <img height="20px" width="20px" src="linkedin.svg" />
+              <img height="20px" width="20px" src="linkedin-logo.svg" />
             </a>
           </div> 
           <div>
             <a target="_blank" href="https://twitter.com/edjgeek">
-              <img height="20px" width="20px" src="twitter.svg" />
+              <img height="20px" width="20px" src="twitter-logo.svg" />
             </a>
           </div>
         </Speaker>
@@ -271,7 +279,7 @@ import { Icon } from 'astro-icon'
           Accenture | Cloud First<br /><br />
           <div style="float: left; padding-right: 8px;">
             <a target="_blank" href="https://www.linkedin.com/in/simonjgr/">
-              <img height="20px" width="20px" src="linkedin.svg" />
+              <img height="20px" width="20px" src="linkedin-logo.svg" />
             </a>
           </div>
         </Organiser>
@@ -282,12 +290,12 @@ import { Icon } from 'astro-icon'
           fourTheorem<br /><br />
           <div style="float: left; padding-right: 8px;">
             <a target="_blank" href="https://www.linkedin.com/in/peterelger/">
-              <img height="20px" width="20px" src="linkedin.svg" />
+              <img height="20px" width="20px" src="linkedin-logo.svg" />
             </a>
           </div>
           <div>
             <a target="_blank" href="https://twitter.com/pelger">
-              <img height="20px" width="20px" src="twitter.svg" />
+              <img height="20px" width="20px" src="twitter-logo.svg" />
             </a>
           </div>
         </Organiser>
@@ -298,11 +306,11 @@ import { Icon } from 'astro-icon'
           Examfly<br /><br />
           <div style="float: left; padding-right: 8px;">
             <a target="_blank" href="https://www.linkedin.com/in/eugen-serbanescu-57a78a51/">
-              <img height="20px" width="20px" src="linkedin.svg" />
+              <img height="20px" width="20px" src="linkedin-logo.svg" />
             </a>
           </div> 
           <div><a target="_blank" href="https://twitter.com/88_eugen">
-            <img height="20px" width="20px" src="twitter.svg" />
+            <img height="20px" width="20px" src="twitter-logo.svg" />
           </a>
         </div>
         </Organiser>
@@ -313,12 +321,12 @@ import { Icon } from 'astro-icon'
           fourTheorem<br /><br />
           <div style="float: left; padding-right: 8px;">
             <a target="_blank" href="https://www.linkedin.com/in/lucianomammino/">
-              <img height="20px" width="20px" src="linkedin.svg" />
+              <img height="20px" width="20px" src="linkedin-logo.svg" />
             </a>
           </div>
           <div>
             <a target="_blank" href="https://twitter.com/loige">
-              <img height="20px" width="20px" src="twitter.svg" />
+              <img height="20px" width="20px" src="twitter-logo.svg" />
             </a>
           </div>
         </Organiser>
@@ -329,7 +337,7 @@ import { Icon } from 'astro-icon'
           Fastly<br /><br />
           <div style="float: left; padding-right: 8px;">
             <a target="_blank" href="https://www.linkedin.com/in/megan-e-davies/">
-              <img height="20px" width="20px" src="linkedin.svg" />
+              <img height="20px" width="20px" src="linkedin-logo.svg" />
             </a>
           </div>
         </Organiser>
@@ -340,7 +348,7 @@ import { Icon } from 'astro-icon'
           IBM<br /><br />
           <div class="organiser-social">
             <a target="_blank" href="https://www.linkedin.com/in/antonwhalley/">
-              <img height="20px" width="20px" src="linkedin.svg" />
+              <img height="20px" width="20px" src="linkedin-logo.svg" />
             </a>
           </div>
         </Organiser>
