--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -94,12 +94,12 @@ import { Icon } from 'astro-icon'
           Amazon Web Services<br /><br />
             <div style="float: left; padding-right: 8px;">
               <a target="_blank" href="https://www.linkedin.com/in/julianrwood">
-                <img height="25px" width="25px" src="linkedin-logo.svg" />
+                <img class=".social-icons" src="linkedin-logo.svg" />
               </a>
             </div>
             <div>
               <a target="_blank" href="https://twitter.com/julian_wood">
-                <img height="25px" width="25px" src="twitter-logo.svg" />
+                <img class=".social-icons" src="twitter-logo.svg" />
               </a>
             </div> 
         </Speaker>
@@ -110,12 +110,12 @@ import { Icon } from 'astro-icon'
           aleios<br /><br />
           <div style="float: left; padding-right: 8px;">
             <a target="_blank" href="https://www.linkedin.com/in/benjaminellerby/">
-              <img height="20px" width="20px" src="linkedin-logo.svg" />
+              <img class=".social-icons" src="linkedin-logo.svg" />
             </a>
           </div>
           <div>
             <a target="_blank" href="https://twitter.com/EllerbyBen">
-              <img height="20px" width="20px" src="twitter-logo.svg" />
+              <img class=".social-icons" src="twitter-logo.svg" />
             </a>
           </div> 
         </Speaker>
@@ -126,12 +126,12 @@ import { Icon } from 'astro-icon'
           Ampt<br /><br />
           <div style="float: left; padding-right: 8px;">
             <a target="_blank" href="https://www.linkedin.com/in/jeremydaly/">
-              <img height="20px" width="20px" src="linkedin-logo.svg" />
+              <img class=".social-icons" src="linkedin-logo.svg" />
             </a>
           </div>
           <div>
             <a target="_blank" href="https://twitter.com/jeremy_daly">
-              <img height="20px" width="20px" src="twitter-logo.svg" />
+              <img class=".social-icons" src="twitter-logo.svg" />
             </a>
           </div>
         </Speaker>
@@ -142,12 +142,12 @@ import { Icon } from 'astro-icon'
           The Burning Monk<br /><br />
           <div style="float: left; padding-right: 8px;">
             <a target="_blank" href="https://www.linkedin.com/in/theburningmonk/">
-              <img height="20px" width="20px" src="linkedin-logo.svg" />
+              <img class=".social-icons" src="linkedin-logo.svg" />
             </a>
           </div> 
           <div>
             <a target="_blank" href="https://twitter.com/theburningmonk">
-              <img height="20px" width="20px" src="twitter-logo.svg" />
+              <img class=".social-icons" src="twitter-logo.svg" />
             </a>
           </div>  
         </Speaker>
@@ -158,12 +158,12 @@ import { Icon } from 'astro-icon'
           fourTheorem<br /><br />
           <div style="float: left; padding-right: 8px;">
             <a target="_blank" href="https://www.linkedin.com/in/lucianomammino/">
-              <img height="20px" width="20px" src="linkedin-logo.svg" />
+              <img class=".social-icons" src="linkedin-logo.svg" />
             </a>
           </div>
           <div>
             <a target="_blank" href="https://twitter.com/loige">
-              <img height="20px" width="20px" src="twitter-logo.svg" />
+              <img class=".social-icons" src="twitter-logo.svg" />
             </a>
           </div>
         </Speaker>
@@ -174,7 +174,7 @@ import { Icon } from 'astro-icon'
           Accenture | Cloud First<br /><br />
           <div style="float: left; padding-right: 8px;">
             <a target="_blank" href="https://www.linkedin.com/in/simonjgr/">
-              <img height="20px" width="20px" src="linkedin-logo.svg" />
+              <img class=".social-icons" src="linkedin-logo.svg" />
             </a>
           </div> 
         </Speaker>
@@ -185,12 +185,12 @@ import { Icon } from 'astro-icon'
           globaldatanet / Serverless Summit<br /><br />
           <div style="float: left; padding-right: 8px;">
             <a target="_blank" href="https://www.linkedin.com/in/marcschroeter/">
-              <img height="20px" width="20px" src="linkedin-logo.svg" />
+              <img class=".social-icons" src="linkedin-logo.svg" />
             </a>
           </div> 
           <div>
             <a target="_blank" href="https://twitter.com/marc_schroeter/">
-              <img height="20px" width="20px" src="twitter-logo.svg" />
+              <img class=".social-icons" src="twitter-logo.svg" />
             </a>
           </div>
         </Speaker>
@@ -201,12 +201,12 @@ import { Icon } from 'astro-icon'
           The LEGO Group<br /><br />
           <div style="float: left; padding-right: 8px;">
             <a target="_blank" href="https://www.linkedin.com/in/marcschroeter/">
-              <img height="20px" width="20px" src="linkedin-logo.svg" />
+              <img class=".social-icons" src="linkedin-logo.svg" />
             </a>
           </div> 
           <div>
             <a target="_blank" href="https://twitter.com/marc_schroeter/">
-              <img height="20px" width="20px" src="twitter-logo.svg" />
+              <img class=".social-icons" src="twitter-logo.svg" />
             </a>
           </div>
         </Speaker>
@@ -217,12 +217,12 @@ import { Icon } from 'astro-icon'
           Amazon Web Services<br /><br />
           <div style="float: left; padding-right: 8px;">
             <a target="_blank" href="https://www.linkedin.com/in/singledigit/">
-              <img height="20px" width="20px" src="linkedin-logo.svg" />
+              <img class=".social-icons" src="linkedin-logo.svg" />
             </a>
           </div> 
           <div>
             <a target="_blank" href="https://twitter.com/edjgeek">
-              <img height="20px" width="20px" src="twitter-logo.svg" />
+              <img class=".social-icons" src="twitter-logo.svg" />
             </a>
           </div>
         </Speaker>
@@ -279,7 +279,7 @@ import { Icon } from 'astro-icon'
           Accenture | Cloud First<br /><br />
           <div style="float: left; padding-right: 8px;">
             <a target="_blank" href="https://www.linkedin.com/in/simonjgr/">
-              <img height="20px" width="20px" src="linkedin-logo.svg" />
+              <img class=".social-icons" src="linkedin-logo.svg" />
             </a>
           </div>
         </Organiser>
@@ -290,12 +290,12 @@ import { Icon } from 'astro-icon'
           fourTheorem<br /><br />
           <div style="float: left; padding-right: 8px;">
             <a target="_blank" href="https://www.linkedin.com/in/peterelger/">
-              <img height="20px" width="20px" src="linkedin-logo.svg" />
+              <img class=".social-icons" src="linkedin-logo.svg" />
             </a>
           </div>
           <div>
             <a target="_blank" href="https://twitter.com/pelger">
-              <img height="20px" width="20px" src="twitter-logo.svg" />
+              <img class=".social-icons" src="twitter-logo.svg" />
             </a>
           </div>
         </Organiser>
@@ -306,11 +306,11 @@ import { Icon } from 'astro-icon'
           Examfly<br /><br />
           <div style="float: left; padding-right: 8px;">
             <a target="_blank" href="https://www.linkedin.com/in/eugen-serbanescu-57a78a51/">
-              <img height="20px" width="20px" src="linkedin-logo.svg" />
+              <img class=".social-icons" src="linkedin-logo.svg" />
             </a>
           </div> 
           <div><a target="_blank" href="https://twitter.com/88_eugen">
-            <img height="20px" width="20px" src="twitter-logo.svg" />
+            <img class=".social-icons" src="twitter-logo.svg" />
           </a>
         </div>
         </Organiser>
@@ -321,12 +321,12 @@ import { Icon } from 'astro-icon'
           fourTheorem<br /><br />
           <div style="float: left; padding-right: 8px;">
             <a target="_blank" href="https://www.linkedin.com/in/lucianomammino/">
-              <img height="20px" width="20px" src="linkedin-logo.svg" />
+              <img class=".social-icons" src="linkedin-logo.svg" />
             </a>
           </div>
           <div>
             <a target="_blank" href="https://twitter.com/loige">
-              <img height="20px" width="20px" src="twitter-logo.svg" />
+              <img class=".social-icons" src="twitter-logo.svg" />
             </a>
           </div>
         </Organiser>
@@ -337,7 +337,7 @@ import { Icon } from 'astro-icon'
           Fastly<br /><br />
           <div style="float: left; padding-right: 8px;">
             <a target="_blank" href="https://www.linkedin.com/in/megan-e-davies/">
-              <img height="20px" width="20px" src="linkedin-logo.svg" />
+              <img class=".social-icons" src="linkedin-logo.svg" />
             </a>
           </div>
         </Organiser>
@@ -348,7 +348,7 @@ import { Icon } from 'astro-icon'
           IBM<br /><br />
           <div class="organiser-social">
             <a target="_blank" href="https://www.linkedin.com/in/antonwhalley/">
-              <img height="20px" width="20px" src="linkedin-logo.svg" />
+              <img class=".social-icons" src="linkedin-logo.svg" />
             </a>
           </div>
         </Organiser>
@@ -401,48 +401,10 @@ import { Icon } from 'astro-icon'
     padding-right: 8px;
   }
 
-/*   .social-linkedin-svg {
-
+  .social-icons {
+    height: 25px;
+    width: 25px;
   }
-
-  .x-svg:hover {
-	  fill: red;
-  }
-
-  .social {
-    float: left;
-    width: 20px;
-    height: 20px;
-    background-size: cover;
-  }
-
-  .social-linkedin {
-    background-image: url(linkedin.svg);
-  }
-
-  .social-linkedin:hover,
-  .social-linkedin:focus {
-    background-image: url(linkedin-hover.svg);
-  }
-
-  .social-linkedin-svg-container {
-    float: left;
-    padding-right: 8px;
-  }
-
-  .social-linkedin-svg {
-    float: left;
-    height: 20px;
-    width: 20px;
-    padding-right: 8px;
-    fill: #009a49;
-  }
-
-  .social-linkedin-svg:hover {
-    float: left;
-    padding-right: 8px;
-    fill: #ffffff;
-  } */
 
   .call-to-action a:not(button),
   .call-to-action a:not(button):visited {
